odt-sample/fcubs-deployment-default80-notworking.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fcubs-deployment
  labels:
    app: fcubs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fcubs
  template:
    metadata:
      labels:
        app: fcubs
    spec:
      volumes:
        - name: fcubs-volume
          configMap:
            name: fcubs-configmap  
      containers:
        - name: fcubs
          image: "default-route-openshift-image-registry.apps.sandbox-m2.ll9k.p1.openshiftapps.com/karthick5268a-dev/nginx-odt"
          ports:
            - containerPort: 8081
              name: serve
          volumeMounts:
            - name:  fcubs-volume
              mountPath: /var/www/static/fcubs
---
apiVersion: v1
kind: Service
metadata:
  name: fcubs-service
  labels:
    app: fcubs-service
spec:
  type: ClusterIP
  ports:
  - name: fcubs-service
    port: 80
    protocol: TCP
    targetPort: 8081
  selector:
    app: fcubs
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fcubs-route
  labels:
    app: fcubs-route
spec:
  host: application-karthick5268a-dev.apps.sandbox-m2.ll9k.p1.openshiftapps.com
  port:
    targetPort: fcubs-service
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: fcubs-service
    weight: 100
  wildcardPolicy: None
