odt-sample/generic-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: odt-route
  labels:
    app: odt-route
spec:
  host: application-karthick5268a-dev.apps.sandbox-m2.ll9k.p1.openshiftapps.com
  port:
    targetPort: fcubs-service
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: fcubs-service
    weight: 100
  wildcardPolicy: None
